--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <iframe src="https://drive.google.com/file/d/1QNVBc8fo_Td8cCm2smlFU4zZWga8urRM/preview" allow="autoplay"></iframe>
     </div>
 <h3> Here are some lilies incase the ones outside don't bloom</h3>
-    <h3> Happy Valentines Day</h3>
+    <h3> Happy Valentine's Day</h3>
     <h3> Love, Andrew <h3>
-    <h6> Sorry we didn't get anymore photos so it's back to this one. <h6>
+    <h6> Sorry we didn't get anymore photos so it's back to this one XX <h6>
     
 </div>
 
