--- a/index.html
+++ b/index.html
@@ -37,16 +37,13 @@
 </head>
 <body>
     <div class="container" id="passcode-page">
-        <h1>Hello Ms. Rutherford</h1>
+        <h1>Hello, Ms. Rutherford</h1>
         <p>Enter your birthday</p>
         <input type="password" id="passcode" placeholder="Day/Month/Year">
         <button class="button" onclick="checkPasscode()">Submit</button>
     </div>
 
-    <div class="container" id="page1" style="display:none;">
-        <h1>Hiii FREAK </h1>
-        <a href="#page2" class="button">Continue</a>
-    </div>
+
 
     <div class="container" id="page2" style="display:none;">
         <h2>I don't trust the weirdos at the flower store... </h2>
