--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+v<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -43,7 +43,10 @@
         <button class="button" onclick="checkPasscode()">Submit</button>
     </div>
 
-
+<div class="container" id="page1" style="display:none;">
+    <h1>Hiii FREAK </h1>
+    <a href="#page3" class="button">Continue</a>
+</div>
 
     <div class="container" id="page2" style="display:none;">
         <h2>I don't trust the weirdos at the flower store... </h2>
