--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
     <div class="container" id="passcode-page">
         <h2>Hello, Ms. Rutherford</h2>
-        <p>Enter your birthday</p>
+        <p> Please Enter Your Birthday</p>
         <input type="password" id="passcode" placeholder="Day/Month/Year">
         <button class="button" onclick="checkPasscode()">Submit</button>
     </div>
