--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="container" id="page2" style="display:none;">
         <h2>I don't trust the weirdos at the flower store... </h2>
-        <h2>so I made this <3</h2>
+        <h2>So I made this <3</h2>
         <a href="#page3" class="button">Continue</a>
     </div>
 
