--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     </div>
 <h3> Here are some lilies incase the ones outside don't bloom</h3>
     <h3> Happy Valentine's Day</h3>
-    <h4> I Love you, <h4>
-   </h4> Andrew  <h4> 
+    <h4> Love, <h4>
+    <h4> Andrew  <h4> 
     
 </div>
 
