--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="container" id="page2" style="display:none;">
         <h2>I don't trust the weirdos at the flower store... </h2>
-        <h2>So I made this <3</h2>
+        <h2>So I made this</h2>
         <a href="#page3" class="button">Continue</a>
     </div>
 
@@ -62,7 +62,6 @@
         <iframe src="https://drive.google.com/file/d/1QNVBc8fo_Td8cCm2smlFU4zZWga8urRM/preview" allow="autoplay"></iframe>
     </div>
 <h3> Here are some lilies incase the ones outside don't bloom</h3>
-    <h3> Happy Valentine's Day</h3>
     <h4> Love, <h4>
     <h4> Andrew  <h4> 
     
